...
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="First Name"
        app:boxBackgroundColor="@color/light_beige"
        app:boxCornerRadiusBottomEnd="16dp"
...
            android:inputType="textPersonName"
            android:maxLength="50"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Last Name"
        app:boxBackgroundColor="@color/light_beige"
        app:boxCornerRadiusBottomEnd="16dp"
...
            android:inputType="textPersonName"
            android:maxLength="50"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:boxBackgroundColor="@color/light_beige"
...
            android:inputType="textEmailAddress"
            android:maxLength="50"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Phone Number"
        app:boxBackgroundColor="@color/light_beige"
        app:boxCornerRadiusBottomEnd="16dp"
...
            android:inputType="phone"
            android:maxLength="10"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Username"
        app:boxBackgroundColor="@color/light_beige"
        app:boxCornerRadiusBottomEnd="16dp"
...
            android:inputType="text"
            android:maxLength="50"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Input Password to allow creating Admin account"
        app:boxBackgroundColor="@color/light_beige"
        app:boxCornerRadiusBottomEnd="16dp"
...
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Submit"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/light_brown"
...
